RESOLVED FIXED 84472
Fix use of LayoutUnits in DOMNodeHighlighter
https://bugs.webkit.org/show_bug.cgi?id=84472
Summary Fix use of LayoutUnits in DOMNodeHighlighter
Emil A Eklund
Reported 2012-04-20 11:24:36 PDT
Bug 84181 added a bunch of new logic to DOMNodeHighlighter that doesn't use the right unit types.
Attachments
Patch (2.31 KB, patch)
2012-04-20 11:34 PDT, Emil A Eklund
no flags
Emil A Eklund
Comment 1 2012-04-20 11:34:25 PDT
Xianzhu Wang
Comment 2 2012-04-20 11:53:18 PDT
Thanks Emil. Sorry I thought the methods accept LayoutUnits without checking. Will they be changed to LayoutUnits in the future?
Emil A Eklund
Comment 3 2012-04-20 11:54:46 PDT
(In reply to comment #2) > Thanks Emil. Sorry I thought the methods accept LayoutUnits without checking. Will they be changed to LayoutUnits in the future? No worries. They might be, in the medium term they'll stay int based to line up with device pixels. Thanks for asking.
WebKit Review Bot
Comment 4 2012-04-20 13:22:24 PDT
Comment on attachment 138127 [details] Patch Clearing flags on attachment: 138127 Committed r114775: <http://trac.webkit.org/changeset/114775>
WebKit Review Bot
Comment 5 2012-04-20 13:22:41 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.