Fix use of LayoutUnits in DOMNodeHighlighter https://bugs.webkit.org/show_bug.cgi?id=84472

Reviewed by Eric Seidel.

Fix use of subpixel units and rounding in new code introduced in r114659.

No new tests, no change in functionality.

* inspector/DOMNodeHighlighter.cpp:


Canonical link: https://commits.webkit.org/101967@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114775 268f45cc-cd09-0410-ab3c-d52691b4dbfc